# Lattice-RingCT

./: .gitignore  CMakeLists.txt  README.md
Ring2.0/: Ring2.0.c  api.h  common.c  common.h  cryptoConfig.h  fips202.h  ntt.c  ntt.h  params.h  poly.c  poly.h  rand.c  rand.h  reduce.h  ring.c  ring.h  ring_test.c  ring_test.h  sha256.c  sha256.h  sha3.h  stdafx.cpp  verify.c  verify.h
optimized/: cpapke.c  kem.c  ntt.c  params.h  poly.c  poly.h  precomp.c  reduce.c  reduce.h
